--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -39,7 +39,3 @@ button {
 
   border: 0.1rem solid $color-grey-300;
 }
-
-::-webkit-scrollbar:horizontal {
-  display: none;
-}
